; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/bsnmpd/tools/libbsnmptools/extr_bsnmptc.c_snmp_bits2oct.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/bsnmpd/tools/libbsnmptools/extr_bsnmptc.c_snmp_bits2oct.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.asn_oid = type { i32 }

@errno = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [18 x i8] c"Bad BITS value %s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*, %struct.asn_oid*)* @snmp_bits2oct to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @snmp_bits2oct(i8* %0, %struct.asn_oid* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.asn_oid*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store %struct.asn_oid* %1, %struct.asn_oid** %5, align 8
  store i32 0, i32* %12, align 4
  %13 = load i32, i32* @errno, align 4
  store i32 %13, i32* %10, align 4
  store i32 0, i32* @errno, align 4
  %14 = load i8*, i8** %4, align 8
  %15 = call i32 @strtoull(i8* %14, i8** %6, i32 16)
  store i32 %15, i32* %11, align 4
  %16 = load i32, i32* @errno, align 4
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %18, label %22

18:                                               ; preds = %2
  %19 = load i8*, i8** %4, align 8
  %20 = call i32 @warn(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0), i8* %19)
  %21 = load i32, i32* %10, align 4
  store i32 %21, i32* @errno, align 4
  store i8* null, i8** %3, align 8
  br label %72

22:                                               ; preds = %2
  store i32 8, i32* %9, align 4
  store i32 4, i32* %8, align 4
  br label %23

23:                                               ; preds = %36, %22
  %24 = load i32, i32* %8, align 4
  %25 = icmp sgt i32 %24, 0
  br i1 %25, label %26, label %39

26:                                               ; preds = %23
  %27 = load i32, i32* %11, align 4
  %28 = load i32, i32* %12, align 4
  %29 = and i32 %27, %28
  %30 = icmp ne i32 %29, 0
  br i1 %30, label %31, label %32

31:                                               ; preds = %26
  br label %39

32:                                               ; preds = %26
  %33 = load i32, i32* %12, align 4
  %34 = load i32, i32* %9, align 4
  %35 = ashr i32 %33, %34
  store i32 %35, i32* %12, align 4
  br label %36

36:                                               ; preds = %32
  %37 = load i32, i32* %8, align 4
  %38 = add nsw i32 %37, -1
  store i32 %38, i32* %8, align 4
  br label %23

39:                                               ; preds = %31, %23
  %40 = load i32, i32* %8, align 4
  %41 = icmp eq i32 %40, 0
  br i1 %41, label %42, label %43

42:                                               ; preds = %39
  store i32 1, i32* %8, align 4
  br label %43

43:                                               ; preds = %42, %39
  %44 = load %struct.asn_oid*, %struct.asn_oid** %5, align 8
  %45 = load i32, i32* %8, align 4
  %46 = call i64 @snmp_suboid_append(%struct.asn_oid* %44, i32 %45)
  %47 = icmp slt i64 %46, 0
  br i1 %47, label %48, label %49

48:                                               ; preds = %43
  store i8* null, i8** %3, align 8
  br label %72

49:                                               ; preds = %43
  store i32 0, i32* %7, align 4
  store i32 0, i32* %9, align 4
  br label %50

50:                                               ; preds = %65, %49
  %51 = load i32, i32* %7, align 4
  %52 = load i32, i32* %8, align 4
  %53 = icmp slt i32 %51, %52
  br i1 %53, label %54, label %70

54:                                               ; preds = %50
  %55 = load %struct.asn_oid*, %struct.asn_oid** %5, align 8
  %56 = load i32, i32* %11, align 4
  %57 = load i32, i32* %12, align 4
  %58 = and i32 %56, %57
  %59 = load i32, i32* %9, align 4
  %60 = ashr i32 %58, %59
  %61 = call i64 @snmp_suboid_append(%struct.asn_oid* %55, i32 %60)
  %62 = icmp slt i64 %61, 0
  br i1 %62, label %63, label %64

63:                                               ; preds = %54
  store i8* null, i8** %3, align 8
  br label %72

64:                                               ; preds = %54
  br label %65

65:                                               ; preds = %64
  %66 = load i32, i32* %7, align 4
  %67 = add nsw i32 %66, 1
  store i32 %67, i32* %7, align 4
  %68 = load i32, i32* %9, align 4
  %69 = add nsw i32 %68, 8
  store i32 %69, i32* %9, align 4
  br label %50

70:                                               ; preds = %50
  %71 = load i8*, i8** %6, align 8
  store i8* %71, i8** %3, align 8
  br label %72

72:                                               ; preds = %70, %63, %48, %18
  %73 = load i8*, i8** %3, align 8
  ret i8* %73
}

declare dso_local i32 @strtoull(i8*, i8**, i32) #1

declare dso_local i32 @warn(i8*, i8*) #1

declare dso_local i64 @snmp_suboid_append(%struct.asn_oid*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
